--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -1,47 +1,13 @@
-@import "_config.scss";
 
-header {
-  position: relative;
-  display: block;
-  width: 100%;
-  background: $black;
-  color: $white;
-  height: 90px;
+@import "config";
+@import "header";
+@import "canvas";
+@import "footer";
 
-  .logo {
-    position: absolute;
-    top: 50%; left: 15px;
-    @include translateY(-50%);
-  }
-
-  nav,
-  nav ul,
-  nav ul li {
-    margin: 0;
-    padding: 0;
-  }
-
-  nav {
-    position: absolute;
-    top: 50%; right: 15px;
-    @include translateY(-50%);
-
-    ul li {
-      list-style-type: none;
-      display: inline-block;
-      margin-right: 20px;
-
-      &.last {
-        margin: 0;
-      }
-
-      a {
-        font-size: 19px;
-        line-height: normal;
-        color: $white;
-      }
-    }
-  }
+body {
+  margin: 0;
+  padding: 0;
+  #root{}
 }
 
 .wrap {
@@ -53,14 +19,4 @@ header {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-}
-
-footer {
-  background: $lightGrey;
-  color: $darkGrey;
-  text-align: right;
-  font-size: 10px;
-  height: 20px;
-  padding-right: 40px;
-  padding-top: 4px;
 }
