--- a/src/Assets/scss/_footer.scss
+++ b/src/Assets/scss/_footer.scss
@@ -1,9 +1,30 @@
-footer {
+Footer {
   background: $lightGrey;
   color: $darkGrey;
-  text-align: right;
-  font-size: 10px;
-  height: 20px;
+  text-align: left;
+  font-size: 12px;
+  height: 40px;
   padding-right: 40px;
+  padding-left: 40px;
   padding-top: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Footer{
+    &_links{
+      height: 30px;
+    }
+
+    &_link{
+      height: 30px;
+      img{
+        height: 30px;
+        width: 30px;
+        fill: $lightGrey;
+        margin-left: 10px;
+      }
+    }
 }
