--- a/src/Assets/scss/_header.scss
+++ b/src/Assets/scss/_header.scss
@@ -1,32 +1,36 @@
+
 header {
   position: relative;
   display: block;
   height: 100vh;
   width: 100%;
 
-    nav,
-    nav ul,
-    nav ul li {
-      margin: 0;
-      padding: 0;
-    }
+  nav {
+    right: 15px;
+    @include translateY(-50%);
 
-    nav {
-      position: absolute;
-      top: 50%; right: 15px;
-      @include translateY(-50%);
+    ul li {
+      display: inline-block;
+      padding-right: 20px;
 
-      ul li {
-        list-style-type: none;
-        display: inline-block;
-        margin-right: 20px;
-
-        a {
-          text-decoration: none;
-          font-size: 19px;
-          line-height: normal;
-          color: $black;
-        }
+      a {
+        font-size: 19px;
+        line-height: normal;
+        color: $black;
       }
     }
   }
+}
+//
+// .Nav_Bar{
+//   position: relative;
+//   top: 10px; right: 0px;
+//   z-index: 1000;
+// }
+//
+// .toolbar{
+//   position: fixed;
+//   top: 10px; right: -10px;
+//   width: 100%;
+//   z-index: 1000;
+// }
