--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -4,18 +4,16 @@
 @import "canvas";
 @import "footer";
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .wrap {
-  flex: 1;
   padding: 40px;
 }
 
-.App {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+.Nav_Bar{
+  position: absolute;
+  top: 10px; right: 0;
+}
+
+.toolbar{
+  position: absolute;
+  top: 10px; left: 10px;
 }
