--- a/src/Assets/scss/_canvas.scss
+++ b/src/Assets/scss/_canvas.scss
@@ -1,11 +1,13 @@
 .BallCanvas, .PaintCanvas{
   position: absolute;
-  top: 0;//-90vh;
+  top: 0;
   right: 0;
-  bottom: 0;//90vh;
+  bottom: 0;
   left: 0;
   padding: 0;
   margin: 0;
+
+  @include transition(all 1s ease);
 
     &_canvas {
       height: 100%;
