--- a/src/Assets/scss/_footer.scss
+++ b/src/Assets/scss/_footer.scss
@@ -1,4 +1,5 @@
 Footer {
+  position: relative;
   background: $lightGrey;
   color: $darkGrey;
   text-align: left;
@@ -8,19 +9,10 @@ Footer {
   padding-left: 40px;
   padding-top: 4px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-
-    &_link{
-      height: 30px;
-      img{
-        height: 30px;
-        width: 30px;
-        padding-left: 10px;
-      }
-    }
+  @include transition(all 1s ease);
 }
 
 .Footer_links{
