--- a/src/Assets/scss/_config.scss
+++ b/src/Assets/scss/_config.scss
@@ -24,6 +24,39 @@ $footerHeight: 43px;
   transition: $e;
 }
 
+@mixin animation($e){
+  -webkit-animation: $e;
+  -moz-animation: $e;
+  -ms-animation: $e;
+  -o-animation: $e;
+  animation: $e;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 // Styles
 
 * {
