--- a/src/Assets/scss/_config.scss
+++ b/src/Assets/scss/_config.scss
@@ -63,6 +63,7 @@ $footerHeight: 43px;
   font-family: 'Open Sans', sans-serif;
   font-style: normal;
   text-decoration: none;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
