--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -59,7 +59,7 @@
 
 .project_gallery{
   position: relative;
-  background: 'lightgreen';
+  background: #999;
   width: 100%;
   height: 500px;
 }
@@ -85,10 +85,11 @@
   cursor: pointer;
   color: $darkGrey;
   @include transition(.4s ease);
-
   &:hover{
+    opacity: 0.5;
     background: 'grey';
     @include transition(.4s ease);
+    color: $white;
   }
 
   & span{
@@ -111,8 +112,10 @@
   @include transition(.4s ease);
 
   &:hover{
+    opacity: 0.5;
     background: 'grey';
     @include transition(.4s ease);
+    color: $white;
   }
 
   & span{
@@ -149,7 +152,7 @@
   width: 13px;
   display: inline-block;
   border-radius: 50%;
-  border: 1px solid $white;
+  border: 1px solid $lightGrey;
   margin-left: 10px;
   cursor: pointer;
   &:hover{
