--- a/src/Assets/scss/_projects.scss
+++ b/src/Assets/scss/_projects.scss
@@ -1,76 +1,159 @@
-//
-// .project_title{
-//   text-align: center;
-// }
-//
-// .project_technologies_label{
-//   text-align: left;
-// }
-//
-// .project_technologies{
-//   float: left;
-//   min-width: 120px;
-//   background-color: $lightGrey;
-//   padding: 10px;
-//   li{
-//     padding: 5px;
-//   }
-// }
-//
-// .project_description{
-//   margin-left: 150px;
-//   text-align: left;
-// }
-//
-// .images{
-//   max-width: 100%;
-// }
-//
-// .image_left, .image_right, .image_button {
-//   cursor: pointer;
-// }
-//
-// .leftArrow{
-//   float: left;
-//   font-size: 30px;
-//   cursor: pointer;
-//   color: $darkGrey;
-// }
-//
-// .rightArrow{
-//   float: right;
-//   font-size: 30px;
-//   cursor: pointer;
-//   color: $darkGrey;
-// }
-//
-// .imageDescription{
-//   text-align: center;
-// }
-//
-// .image_button{
-//   height: 13px;
-//   width: 13px;
-// }
-//
-// .ProjectItem{
-//   padding-bottom: 100px;
-//   text-align: center;
-// }
-//
-// .dot{
-//   background-color: transparent;
-//   height: 13px;
-//   width: 13px;
-//   display: inline-block;
-//   border-radius: 50%;
-//   border: 1px solid $darkGrey;
-//   margin-left: 10px;
-//   cursor: pointer;
-//   &:hover{
-//     background-color: $darkGrey;
-//   }
-// }
-// .fill{
-//   background-color: $darkGrey;
-// }
+
+.projects{
+  color: $darkGrey;
+  h1{
+    text-decoration: underline;
+    color: $greyBlue;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+}
+
+.project_title{
+  text-align: left;
+  padding-left: 150px;
+  color: $maroon;
+  border-bottom: 1px solid white;
+}
+
+.project_info{
+  height: auto;
+  overflow: auto;
+  margin-bottom: 20px;
+}
+
+.project_technologies_label{
+  text-align: left;
+  border-right: 1px solid white;
+  width: 145px;
+  color: $greyBlue;
+}
+
+.project_technologies{
+  float: left;
+  background-color: $greyBlue;
+  min-width: 120px;
+  padding: 10px;
+  li{
+    text-align: center;
+    padding: 5px;
+    color: $grey;
+    margin-bottom: 5px;
+  }
+}
+
+.project_description{
+  margin-left: 145px;
+  padding-left: 5px;
+  text-align: left;
+  border-left: 1px solid white;
+}
+
+///////////////
+
+.project_gallery{
+  position: relative;
+  background: $darkGrey;
+  width: 100%;
+  height: 500px;
+}
+
+.images{
+  margin: 0 auto;
+  max-width: 100%;
+  height: 100%;
+}
+
+.image_left, .image_right, .image_button {
+  cursor: pointer;
+}
+
+.leftArrow{
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  height: 100%;
+  width: 25px;
+
+  font-size: 30px;
+  cursor: pointer;
+  color: $black;
+  @include transition(.4s ease);
+  &:hover{
+    opacity: 0.5;
+    background: 'grey';
+    @include transition(.4s ease);
+    color: $white;
+  }
+
+  & span{
+    position: absolute;
+    top: 45%;
+    left: 0;
+  }
+}
+
+.rightArrow{
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  height: 100%;
+  width: 25px;
+
+  font-size: 30px;
+  cursor: pointer;
+  color: $black;
+  @include transition(.4s ease);
+
+  &:hover{
+    opacity: 0.5;
+    background: 'grey';
+    @include transition(.4s ease);
+    color: $white;
+  }
+
+  & span{
+    position: absolute;
+    top: 45%;
+    right: 0%;
+  }
+}
+
+.image_description{
+  text-align: center;
+}
+
+.image_button{
+  height: 13px;
+  width: 13px;
+}
+
+.ProjectItem{
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.gallery_dots{
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  margin: auto;
+}
+
+.dot{
+  background-color: transparent;
+  height: 13px;
+  width: 13px;
+  display: inline-block;
+  border-radius: 50%;
+  border: 1px solid $lightGrey;
+  margin-left: 10px;
+  cursor: pointer;
+  &:hover{
+    background-color: $white;
+  }
+}
+
+.fill{
+  background-color: $white;
+}
