--- a/src/Assets/scss/_projects.scss
+++ b/src/Assets/scss/_projects.scss
@@ -61,7 +61,7 @@
 .images{
   margin: 0 auto;
   max-width: 100%;
-  height: 100%;
+  max-height: 100%;
 }
 
 .image_left, .image_right, .image_button {
