--- a/src/Assets/scss/_toolbar.scss
+++ b/src/Assets/scss/_toolbar.scss
@@ -18,6 +18,7 @@ $toolbarWidth: 235px;
   padding: 0px;
   cursor: pointer;
   border: 1px #888 solid;
+  border-radius: 5px;
   box-shadow: 2px 2px 5px;
 }
 
@@ -93,7 +94,7 @@ $toolbarWidth: 235px;
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 
   li{
-    padding: 5px;
+    padding: 5px 5px 2px 5px;
   }
 }
 
