--- a/src/Assets/scss/_canvas.scss
+++ b/src/Assets/scss/_canvas.scss
@@ -14,3 +14,15 @@
       width: 100%;
     }
   }
+
+  .CDefense_canvas{
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    @include transition(all 1s ease);
+    }
