--- a/src/Assets/scss/_canvas.scss
+++ b/src/Assets/scss/_canvas.scss
@@ -16,6 +16,7 @@
   }
 
   .CDefense_canvas{
+    background: linear-gradient(45deg, rgba(0,1,19,1) 0%,rgba(1,10,53,1) 15%,rgba(1,13,61,1) 60%,rgba(0,1,19,1) 100%);
     margin: auto;
     display: block;
     position: absolute;
