balanced waves. added teleport, zag, and stealth enemies. moved footer to top left on game page. added skill description. added shield perk. removed regen perk.

--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -30,5 +30,6 @@ body{
   top: $navHeight;
   margin: 0 auto;
   min-height: calc(100vh - #{$navHeight - $footerHeight} - 123px);
+  z-index: 1;
   @include animation(fadein 2s);
 }
